# defacement_monitoring

./: .gitignore  Cargo.toml  README.md
resources/: email.toml
src/: communication.rs  comparators.rs  databases.rs  main.rs  parser.rs  parsers.rs
src/communication/: email.rs
src/comparators/: checksum_comparator.rs  diff_comparator.rs
src/databases/: database.rs  sqlitedb.rs
src/page_management/: page_management.rs
src/parsers/: chromium_parser.rs
