[package]
name = "defacement_mon"
version = "0.1.0"
edition = "2021"
authors = ["Nuno Neto", "Jaime Silva"]

[dependencies]
#Used to perform checksum checks
sha1 = "0.6.0"
#SQLLite dependencies
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"
rusqlite = "0.26.3"
#Used to check the % of difference between pages.
difference = "2.0.0"
#Used for sending emails
lettre = "0.10.0-rc.4"
lettre_email = "0.9.4"

#Async runtime so we can parallelize the verification of webpages,
#Thusly improving the performance signficantly
tokio={version = "1.15.0", features = ["full"]}

#TOML for configuration files
toml = "0.5.8"

log = "0.4.14"
env_logger = "0.8"